--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     <div class="container history hidden">
       <div>
         <h2 class="title">Historial</h2>
-        <ul class="items-list"></ul>
+        <ul class="items-list">
+          <li class="item">
+         </li>
+        </ul>
       </div>
       <button class="btn back-btn">Volver</button>
     </div>
