--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="css\styles.css" />
   </head>
   <body>
+
     <!-- Hero -->
     <div class="hero">
       <div class="container">
+        <img class="settings-btn" src="./img/settings.png" alt="Botón de configuración">
+
         <img src="img\hero-img.svg" class="img" alt="Imagen de fondo" />
         <div class="budget">
           <div>
@@ -54,7 +57,6 @@
             class="input"
             name="description"
             id="description"
-            required
           />
           <h3>Monto</h3>
           <input
@@ -63,7 +65,6 @@
             name="amount"
             id="amount"
             pattern="^[0-9]+"
-            required
           />
           <button type="submit" class="btn add-btn" id="add-input">
             guardar
@@ -92,6 +93,35 @@
       </div>
     </div>
 
+    <!-- Edit input -->
+    <div class="modal-bg edition hidden">
+      <div class="alert-container">
+        <button class="btn back-btn" onclick="closeModal(edition)"">x</button>
+        <form id="edit-form">
+          <h4>Nueva Descripción</h4>
+          <p class="old old-description">Descripción anterior</p>
+          <input
+            type="text"
+            class="input"
+            name="description"
+            id="new-description"
+          />
+          <h4>Nuevo Monto</h4>
+          <p class="old old-amount">$100</p>
+          <input
+            class="input"
+            type="text"
+            name="amount"
+            id="new-amount"
+            pattern="^[0-9]+"
+          />
+          <button type="submit" class="btn">
+            guardar
+          </button>
+        </form>
+      </div>
+    </div>
+    
     <script src="js\script.js"></script>
   </body>
 </html>
