--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
     <!-- Hero -->
     <div class="hero">
       <div class="container">
-        <img class="settings-btn" src="./img/settings.png" alt="Botón de configuración">
+        <div class="dropdown">
+          <button class="dropdown-btn ">
+            <img src="./img/settings.png" alt="Botón de configuración">
+          </button>
+          <div class="dropdown-menu">
+            <div class="menu-item" id="menu-account">
+              <img class="menu-icon" src="./img/menu-account.png" alt="">
+              <p>Cuenta</p>
+            </div>
+            <div class="menu-item" id="menu-clearall">
+              <img class="menu-icon" src="./img/menu-deleteall.png" alt="">
+              <p>Eliminar datos</p>
+            </div>
+          </div>
+        </div>
 
         <img src="img\hero-img.svg" class="img" alt="Imagen de fondo" />
         <div class="budget">
@@ -121,7 +135,7 @@
         </form>
       </div>
     </div>
-    
+
     <script src="js\script.js"></script>
   </body>
 </html>
