--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <form id="form">
           <h3>Tipo</h3>
           <select name="input-type" class="input" id="type">
-            <option value="income" selected>INGRESO</option>
+            <option value="income">INGRESO</option>
             <option value="expense">GASTO</option>
           </select>
           <div class="categories hidden">
