adding chart.js library

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="btns">
             <button class="btn input-btn">Añadir</button>
             <button class="btn history-btn">Historial</button>
-            <button class="btn analysis-btn">Analiticas</button>
+            <button class="btn overview-btn">Resumen</button>
           </div>
         </div>
       </div>
@@ -131,6 +131,26 @@
       </div>
     </div>
 
+    <!-- Overview -->
+    <div class="modal-bg overview hidden">
+      <div class="container overview-container">
+        <button class="btn back-btn" onclick="closeModal(overview)">x</button>
+        <div>
+          <h2 class="title">Resumen</h2>
+          <div class="chart-container">
+            <div class="chart-content">
+              <h3 class="chart-title">Presupuesto disponible: <span id="budget">$0</span></h3>
+              <canvas id="general-chart"></canvas>
+            </div>
+            <div class="chart-content expense-chart">
+              <h3 class="chart-title">Gastos por categoría</h3>
+              <canvas id="expense-chart"></canvas>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Edit input -->
     <div class="modal-bg edition hidden">
       <div class="alert-container">
@@ -170,6 +190,7 @@
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js\script.js"></script>
   </body>
 </html>
